2003-03-26  Micah J. Lieske  <MicahJon@compuserve.com>

	* arch/sdl/event.c, arch/sdl/joy.c: added hat support for sdl
	joysticks

2003-03-26  Bradley Bell  <btb@icculus.org>

	* main/piggy.c: fix crash when d1 data not present

	* main/gamecntl.c, main/kconfig.c, main/playsave.c: fix d2x keys,
	read/write from plr file

	* main/ai.h, main/collide.c, main/escort.c, main/escort.h,
	main/fuelcen.c, main/gamecntl.c, main/playsave.c, main/powerup.c:
	added escort.h header

2003-03-25  Bradley Bell  <btb@icculus.org>

	* main/bm.c, main/piggy.c, main/piggy.h, main/gameseq.c: added
	D1_PIGFILE ("descent.pig") macro

	* main/bm.c, main/piggy.c, main/piggy.h: ability to load exit
	models from d1 pig file

	* main/bm.c, main/bm.h, main/endlevel.c, main/piggy.c,
	main/piggy.h: ability to load exit model bitmaps (or any bitmap,
	really) from d1 pig file

2003-03-23  Bradley Bell  <btb@icculus.org>

	* main/bm.c: stop extra robots from overwriting exit models

	* include/ogl_init.h: increased OGL_TEXTURE_LIST_SIZE so the
	texture list doesn't get full

	* main/bm.c: fix mem leak when reading extra robots

2003-03-21  Bradley Bell  <btb@icculus.org>

	* main/menu.c: Added option to set movie resolution (mostly works)

2003-03-21  Martin Schaffner <maschaffner@gmx.ch>

	* main/gameseq.c, main/piggy.c, main/piggy.h: move bitmap
	replacement functions to piggy.c

	* main/gameseq.c: attempt to support mac d1 descent.pig

	* main/bm.c: fix mem leak

	* main/gameseq.c: fix bug: when opening d1 level 1 with oem data
	files, both d1 and d2 oem briefing where showed

	* main/inferno.c, main/movie.c: Change the default movie
	resolution to "high", implement the option -lowresmovies

2003-03-20  Bradley Bell  <btb@icculus.org>

	* arch/sdl/rbaudio.c, main/songs.c: cd detection works now

	* main/piggy.c: comments

2003-03-20  Martin Schaffner <maschaffner@gmx.ch>

	* main/gameseq.c: delete duplicate function

	* 2d/rle.c: fix color swapping on big endian of big rle bitmaps
