@@ -1,3 +1,7 @@
+2003-03-26  Bradley Bell  <btb@icculus.org>
+
+	* main/playsave.c: make d2x keys backward compatible
+
 2003-03-26  Micah J. Lieske  <MicahJon@compuserve.com>
 
 	* arch/sdl/event.c, arch/sdl/joy.c: added hat support for sdl
